--- a/examples/tutorial/type_inject/type_inject.yaml
+++ b/examples/tutorial/type_inject/type_inject.yaml
@@ -1,4 +1,4 @@
 app:
-    name: class-inject-name
+    name: type-inject-name
     user:
-        username: ncdhz-class-inject
+        username: ncdhz-type-inject
